[gd_scene load_steps=2 format=3 uid="uid://cd7yrihgbhxhv"]

[ext_resource type="Script" path="res://scripts/ui/main_menu.gd" id="1_bwxoq"]

[node name="MainMenu" type="Control"]
layout_mode = 3
anchors_preset = 0
offset_right = 40.0
offset_bottom = 40.0
script = ExtResource("1_bwxoq")

[node name="ColorRect" type="ColorRect" parent="."]
layout_mode = 0
offset_right = 1152.0
offset_bottom = 647.0
color = Color(0.411765, 0.466667, 0.596078, 1)

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 0
offset_left = 423.0
offset_right = 727.0
offset_bottom = 498.0
alignment = 1

[node name="Label" type="Label" parent="VBoxContainer"]
layout_mode = 2
text = "CHESS 100"
horizontal_alignment = 1

[node name="PlayButton" type="Button" parent="VBoxContainer"]
layout_mode = 2
text = "Play"

[node name="UnitManagerButton" type="Button" parent="VBoxContainer"]
layout_mode = 2
text = "Unit Manager"

[node name="QuitButton" type="Button" parent="VBoxContainer"]
layout_mode = 2
text = "Quit"
